<resources>
    <string name="app_name">AcompanhaAi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registre">"Clique para se registrar!"</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Histórico</string>
    <string name="menu_slideshow">Previsões</string>
    <string name="menu_tools">Configurações</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio.com</string>
    <string name="fragment_consumo">Consumo</string>
    <string name="fragment_valor">Valor estimado</string>
    <string name="close">Fechar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="valor_real">Valor da conta</string>
    <string name="periodo">Período</string>
    <string name="fechar_titulo">Você deseja fechar o período?</string>
    <string name="calcular">Calcular</string>


    <!-- Titulos-->
    <string name="home">Home</string>
    <string name="histo">Histórico</string>
    <string name="prev">Previsão</string>
    <string name="config">Configurações</string>
    <string name="con_inic">Consumo Inicial</string>

    <!-- Mensagens -->
    <string name="msg_consumo_inicial">
        M³ do registro de sua ultima conta
    </string>
    <string name="msg_cancel_inicial">
        É necessário valor inicial para iniciar os cálculos
    </string>
    <string name="msg_historico">
        Ainda não existem dados para serem exibidos
    </string>
    <string name="msg_consumo">
          M³ do registro de sua conta
    </string>
    <string name="msg_consumo_vazio">É necessário informar um novo valor para calcular</string>
</resources>
